--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -2,67 +2,168 @@
   <a href="/home">
     <image src="../../../img/logo.jpg"/>
   </a>
+
+  <div class="responsive-menu" style="display: none;">
+    <i class="fi fi-br-bars-sort"></i>
+  </div>
 </div>
 
-<div class="dropdown">
-  <div class="dropdown-title">
-    <i class="fi fi-br-menu-burger"></i>
-    <p>DANH MỤC SẢN PHẨM</p> 
+<div class="menu">
+  <div class="dropdown">
+    <div class="dropdown-title">
+      <i class="fi fi-br-menu-burger"></i>
+      <p>DANH MỤC SẢN PHẨM</p> 
+    </div>
+
+    <ul>
+      <li>
+        <a href="/all-products/skincare">
+          Skincare
+          <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
+        </a>
+        <ul>
+            <li>
+              <a href="/all-products/skincare/xit-khoang">
+                Xịt khoáng
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647064/cHJvZHVjdHMvYmozc2ZhZTRkeGllb2psY2s4aWk=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/mat-na">
+                Mặt nạ
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648052/cHJvZHVjdHMveWNtMG9ucXM2MjRsaHMyaDczZDM=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/serum">
+                Serum
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648014/cHJvZHVjdHMvc2ZzY3p6emFjc3JudjBveHB3NHQ=/preview" alt="">
+            </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/bha">
+                BHA
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647156/cHJvZHVjdHMvaXRwZncycnZiZ2x3amxsZm1md2Q=/preview" alt="">
+            </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/tay-da-chet">
+                Tẩy da chết
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647212/cHJvZHVjdHMvYXFqcjlhZDlrMWdzb2x0dWNzM3I=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/duong-da">
+                Dưỡng da
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647079/cHJvZHVjdHMvYnNiaHFoMm1jdWE4b2trZndwY3E=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/toner">
+                Toner
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647707/cHJvZHVjdHMvajNnbWtrbmxodGp1cnU4aWc1aW0=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/nuoc-tay-trang">
+                Nước tẩy trang
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647750/cHJvZHVjdHMvZDg1amlmanBnZGdhMTVrenBha2E=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/cham-mun">
+                Chấm mụn
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647968/cHJvZHVjdHMvYWFyMmpxc2x3ZTlza2RidG1yb3Y=/preview" alt="">
+              </a>
+            </li>
+            
+            <li>
+              <a href="/all-products/skincare/kem-duong-am">
+                Kem dưỡng ẩm
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648227/cHJvZHVjdHMvdGl2azJ0ZTNlY2hpcmhlbXljdXA=/preview" alt="">
+              </a>
+            </li>
+
+            <li>
+              <a href="/all-products/skincare/sua-rua-mat">
+                Sữa rửa mặt
+                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648203/cHJvZHVjdHMvenk4YXBsaGd1emxzdWNtbGZ3Z3Q=/preview" alt="">
+              </a>
+            </li>
+        </ul>
+      </li>
+      <li>
+        <a href="/all-products/makeup">
+          Makeup
+          <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
+        </a>
+        <ul>
+          <li>
+            <a href="/all-products/makeup/phan-ma">
+              Phấn má
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647688/cHJvZHVjdHMvaWM5b29ka2tzZ3F1aW1vYndrM3U=/preview" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="/all-products/makeup/mascara">
+              Mascara
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647373/cHJvZHVjdHMvbHdnZmVjYWpzMHNxdnBrYWxwaXA=/preview" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="/all-products/makeup/ke-mat">
+              Kẻ mắt
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647427/cHJvZHVjdHMvZ2d4M3dleDQ1em96YTFyd2xuczM=/preview" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="/all-products/makeup/kem-chong-nang">
+              Kem chống nắng
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648070/cHJvZHVjdHMvZGVyNmRsNG1jNjYwdnZ6dXFmdm8=/preview" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="/all-products/makeup/che-khuyet-diem">
+              Che khuyết điểm
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648154/cHJvZHVjdHMvZm13a3RoZGJ5cnpzZHpjdGluZDQ=/preview" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="/all-products/makeup/son">
+              Son
+              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647180/cHJvZHVjdHMvc2Z5YWVqdWVtaHl4YWRweHJqOWs=/preview" alt="">
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </div>
 
-  <ul>
-    <li>
-      <a href="/all-products/skincare">
-        Skincare
-        <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-      </a>
-      <ul>
-          <li><a href="/all-products/skincare/xit-khoang">Xịt khoáng</a></li>
-          <li><a href="/all-products/skincare/mat-na">Mặt nạ</a></li>
-          <li><a href="/all-products/skincare/serum">Serum</a></li>
-          <li><a href="/all-products/skincare/bha">BHA</a></li>
-          <li><a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a></li>
-          <li><a href="/all-products/skincare/duong-da">Dưỡng da</a></li>
-          <li><a href="/all-products/skincare/toner">Toner</a></li>
-          <li><a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a></li>
-          <li><a href="/all-products/skincare/cham-mun">Chấm mụn</a></li>
-          <li><a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a></li>
-          <li><a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="/all-products/makeup">
-        Makeup
-        <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-      </a>
-      <ul>
-        <li><a href="/all-products/makeup/phan-ma">Phấn má</a></li>
-        <li><a href="/all-products/makeup/mascara">Mascara</a></li>
-        <li><a href="/all-products/makeup/ke-mat">Kẻ mắt</a></li>
-        <li><a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a></li>
-        <li><a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a></li>
-        <li><a href="/all-products/makeup/son">Son</a></li>
-      </ul>
-    </li>
-  </ul>
+  <div class="title">
+    <a href="/introduce">GIỚI THIỆU</a>
+  </div>
+
+  <div class="title">
+    <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
+  </div>
+
+  <div class="title">
+    <a href="/all-orders/checking">ĐƠN HÀNG</a>
+  </div>
+
+  <div class="title">
+    <i class="fi fi-br-search" ></i>
+  </div>
 </div>
 
-<div class="title">
-  <a href="/introduce">GIỚI THIỆU</a>
-</div>
-
-<div class="title">
-  <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
-</div>
-
-<div class="title">
-  <a href="/all-orders/checking">ĐƠN HÀNG</a>
-</div>
-
-<div class="title">
-  <i class="fi fi-br-search" ></i>
-</div>
-  
 <div class="header-button">
   <a href="/all-orders" class="orders">
     <span class="orders-quantity"></span>    
@@ -179,6 +280,32 @@
     }
   }
 
+  // resposive menu
+  var responsiveMenu = document.querySelector('div.responsive-menu')
+  var menu = document.querySelector('div.menu')
+  var width = window.innerWidth
+
+  function setDisplay(width, menu) {
+    if (width < 700) {
+      menu.style.display = 'none'
+    } else {
+      menu.style.display = 'flex'
+    }
+  }
+  setDisplay(width, menu)
+
+  window.addEventListener("resize", function() {
+    width = window.innerWidth
+    setDisplay(width, menu)
+  });
+
+  responsiveMenu.onclick = function() {
+    if (menu.style.display === 'none') {
+      menu.style.display = 'flex'
+    } else {
+      menu.style.display = 'none'
+    }
+  }
   
   
 </script>
