--- a/src/resource/views/users/newArrival.hbs
+++ b/src/resource/views/users/newArrival.hbs
@@ -1,4 +1,4 @@
-<div class="new-arrival-container" style="padding-top: 170px;">
+<div class="new-arrival-container">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
     <div class="main-title" style="text-transform: uppercase"><b>Hàng mới về</b></div>
