--- a/src/public/css/userHeader.css
+++ b/src/public/css/userHeader.css
@@ -13,12 +13,26 @@ header {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   .store-logo {
-    padding: 0 10px 0 10px;
+    padding: 0 10px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     img {
       max-width: 50px;
       aspect-ratio: 1 / 1;
     }
   };
+
+  .menu {
+    /* display: flex; */
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    padding-right: 20px;
+  }
 
   .search-form {
     position: absolute;
@@ -39,6 +53,9 @@ header {
   
   .header-button {
     padding: 0 20px 0 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .orders {
       text-decoration: none;
@@ -71,11 +88,12 @@ header {
     img {
       border-radius: 50%;
       width: 40px;
+      aspect-ratio: 1/1;
       border: 2px solid black;
       cursor: pointer;
     }
   }
-
+  
   .avatar-menu {
     position: absolute;
     background-color: white;
@@ -143,7 +161,7 @@ header {
 
     li {
       width: 200px;
-      height: 45px;
+      height: 60px;
       padding: 5px;
     }
 
@@ -153,7 +171,14 @@ header {
       left: 210px;
       display: grid;
       justify-content: start;
-      grid-template-columns: auto auto auto
+      grid-template-columns: auto auto auto;
+      column-gap: 50px;
+    }
+
+    img {
+      width: 40px;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
     }
 
     a {
@@ -164,6 +189,7 @@ header {
       color: black;
       padding: 10px;
       border-radius: 5px;
+      height: 40px;
     }
 
     a:hover { 
@@ -191,9 +217,37 @@ header {
 }
 
 @media screen and (max-width: 700px) {
-  .header-button {
-    i, span {
-      display: none;
-    };
-  };
+  .responsive-menu {
+    display: block !important;
+    padding: 10px;
+  }
+
+  .avt-img {
+    padding-right: 20px !important;
+  }
+
+  .menu {
+    position: absolute !important;
+    top: 70px;
+    right: 0px;
+    left: auto;
+    flex-direction: column;
+    align-items: center !important;
+    background-color: white;
+    padding-right: 0 !important;
+    height: 400px !important;
+    gap: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    z-index: 3;
+    /* display: none !important; */
+  }
+
+  .menu > div {
+    border-radius: 10px;
+    width: 100%;
+    padding: 10px;
+    width: 90%;
+    background-color: #f8f6f6;
+  }
 }
